test/modules/deitz/test_module_class_conflict2.good
test_module_class_conflict2.chpl:11: In module 'M1':
test_module_class_conflict2.chpl:13: error: cannot 'use' symbol 'MC', which is not a module or 'enum'
